# refactoring

./: .gitignore  CHANGELOG.md  MANIFEST.in  PKG-INFO  README.md  TODO.md  benchmark_ram_optimization.py  goal.yaml  planfile.yaml  prefact.yaml  project.sh  pyproject.toml  setup.py  test_large_files.py  test_ram_implementation.py
docs/: MIGRATION_GUIDE.md  RAM_OPTIMIZATION.md  README.md
examples/: README.md  generate_examples.py  requirements.txt  run_all.sh  run_examples.py
examples/01-individual-rules/: README.md
examples/01-individual-rules/duplicate-imports/: README.md  after.py  before.py  prefact.yaml
examples/01-individual-rules/missing-return-type/: README.md  after.py  before.py  prefact.yaml
examples/01-individual-rules/print-statements/: README.md  after.py  before.py  prefact.yaml
examples/01-individual-rules/relative-imports/: README.md  after.py  before.py  prefact.yaml
examples/01-individual-rules/sorted-imports/: README.md  after.py  before.py  prefact.yaml
examples/01-individual-rules/string-concat/: README.md  after.py  before.py  prefact.yaml
examples/01-individual-rules/unused-imports/: after.py  after.py.bak  before.py  before.py.bak  prefact.yaml
examples/01-individual-rules/wildcard-imports/: README.md  after.py  before.py  prefact.yaml
examples/02-multiple-rules/: README.md  messy_module.py  prefact.yaml
examples/03-output-formats/: README.md  prefact.yaml  sample_code.py  test-report.json
examples/04-custom-rules/: README.md
examples/04-custom-rules/custom_rules/: __init__.py  no_todo_rule.py
examples/05-ci-cd/: .gitlab-ci.yml  README.md
examples/05-ci-cd/.github/workflows/: prefact.yml
examples/06-api-usage/: README.md  example.py
examples/07-enterprise/: prefact.yaml
examples/08-llm-focused/: prefact.yaml
examples/09-high-performance/: prefact.yaml
examples/10-plugin-development/: prefact.yaml
examples/11-ci-cd/: prefact.yaml
examples/12-complete-example/: prefact.yaml
examples/sample-project/: README.md  cli.py  cli.py.bak  core.py  core.py.bak  models.py  models.py.bak  prefact.yaml  utils.py  utils.py.bak
examples/tests/: test_examples.py
prefact/: __init__.py  cli.py  core.py  utils.py
project/: README.md  analysis.toon.yaml  calls.mmd  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
refactoring/: __init__.py  cli.py  core.py
src/prefact/: __init__.py  autonomous.py  cli.py  config.py  config_extended.py  engine.py  fixer.py  git_hooks.py  logging.py  models.py  scanner.py  validator.py
src/prefact/autonomous/: __init__.py  _base.py  docs_manager.py  project_scanner.py  setup_manager.py  todo_manager.py
src/prefact/performance/: __init__.py  cache.py  parallel.py
src/prefact/plugins/: __init__.py  builtin.py
src/prefact/reporters/: __init__.py  console.py  json_reporter.py
src/prefact/rules/: __init__.py  ai_boilerplate.py  autoflake_based.py  benchmark.py  composite.py.bak  composite_factory.py  composite_rules.py  duplicate_imports.py  import_linter_based.py  importchecker_based.py  isort_based.py  llm_generated_code.py  llm_hallucinations.py  llm_specific.py  magic_numbers.py  migration.py  mypy_based.py  print_statements.py  pylint_based.py  registry.py  relative_imports.py  ruff_based.py  sorted_imports.py  strategies.py  string_concat.py  string_transformations.py  type_hints.py  unimport_based.py  unused_imports.py  wildcard_imports.py
tests/: test_config.py  test_engine.py  test_integrations.py  test_refactoring.py  test_relative_imports.py  test_rules.py  test_unused_imports.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/test/: prefact.test.js
